# agentic-eval-harness

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: _cosign-sign.yml  ci-python.yml
docs/: design.md
docs/adr/: 0001-own-loop-no-framework.md
eval/: cases.yaml
eval/approval_audit/: cases.yaml
eval/browser_ops/: cases.yaml
eval/customer_support/: cases.yaml
eval/data_semantic/: cases.yaml
eval/fintech_compliance/: cases.yaml
eval/industrial/: cases.yaml
eval/process_mapping/: cases.yaml
eval/retail_ops/: cases.yaml
eval/routing/: cases.yaml
eval/trust_safety/: cases.yaml
fixtures/approval_audit/: PROVENANCE.md  audit_pressure.jsonl  conflicts.jsonl  lures.jsonl
fixtures/browser_ops/: PROVENANCE.md  policy.json  portals.jsonl  scenarios.jsonl
fixtures/customer_support/: PROVENANCE.md  escalations.jsonl  misroutes.jsonl  policy.json  qc.json  tickets.jsonl
tests/: test_agent_loop.py  test_approval_audit_eval.py  test_approval_audit_tools.py  test_browser_ops_eval.py  test_browser_ops_tools.py  test_customer_support_eval.py  test_customer_support_tools.py  test_data_semantic_eval.py  test_data_semantic_tools.py  test_dimensions.py  test_fintech_compliance_eval.py  test_fintech_compliance_tools.py  test_industrial_eval.py  test_industrial_tools.py  test_process_mapping_eval.py  test_process_mapping_tools.py  test_retail_ops_eval.py  test_retail_ops_tools.py  test_routing_eval.py  test_routing_tools.py  test_scoring.py  test_tools.py  test_trust_safety_eval.py  test_trust_safety_tools.py
(+320 files in other folders)
