[project]
name = "agentic-eval-harness"
version = "0.1.0"
description = "One agentic plan-act-observe loop over real tools, plus the reproducible eval harness (golden set, rubric, regression tracking) that scores it"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0 OR MIT"
authors = [
    { name = "Chris Youngblut" },
]
dependencies = [
    "anthropic>=0.79",
    "pydantic>=2.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pyright>=1.1",
    "ruff>=0.8",
    "pip-audit>=2.7",
]

[project.scripts]
agentic-eval = "agentic_eval.runner:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_eval"]

# --- ruff ---
[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# Enable: pycodestyle, pyflakes, isort, bugbear, comprehensions, simplify, naming, pyupgrade
select = ["E", "F", "I", "B", "C4", "SIM", "N", "UP", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert is fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- pyright ---
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]
reportMissingTypeStubs = "warning"

# --- pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = []
